@@ -9094,6 +9094,38 @@ return|return
 name|openTime
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|explain
+specifier|public
+name|Explanation
+name|explain
+parameter_list|(
+name|Query
+name|query
+parameter_list|,
+name|int
+name|doc
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|super
+operator|.
+name|explain
+argument_list|(
+name|QueryUtils
+operator|.
+name|makeQueryable
+argument_list|(
+name|query
+argument_list|)
+argument_list|,
+name|doc
+argument_list|)
+return|;
+block|}
 comment|/////////////////////////////////////////////////////////////////////
 comment|// SolrInfoMBean stuff: Statistics and Module Info
 comment|/////////////////////////////////////////////////////////////////////
